
Release history for Importer-Zim-Lexical

{{$NEXT}}

v0.9     2017-11-08 16:43:30-08:00 America/Los_Angeles

    - export_to() function

v0.8     2017-09-29 11:29:07-07:00 America/Los_Angeles

    - Produce DEBUG message with carp()
    - Depend on Importer::Zim::Utils 0.8.0
    - Depend on Importer::Zim::Base 0.8.0
    - Depend on Sub::Lexical 0.2.0

v0.7     2017-09-28 09:48:28-07:00 America/Los_Angeles

    [FIX]
    - Inject subroutines into the proper lexical context
      of the caller (think warnings, hints, etc.)

v0.6     2017-09-21 18:32:52-07:00 America/Los_Angeles

    - Depend on Importer::Zim::Base 0.5.0

v0.5     2017-09-15 19:35:26-07:00 America/Los_Angeles

    - Depend on Importer::Zim::Base 0.4.0

v0.4     2017-09-13 13:15:36-07:00 America/Los_Angeles

    - Depend on Importer::Zim::Base 0.3.0
    - Support to "use IMPORTER MODULE => { -strict => 0 }...
    - Debugging enabled with IMPORTER_ZIM_DEBUG
    - t/02-basic.t: Importer is well behaved by default
    - t/02-basic.t: -strict => 0 for importing the not-exportable

v0.3     2017-09-10 19:21:43-07:00 America/Los_Angeles

    - Use Sub::Inject

v0.2     2017-09-06 18:30:45-07:00 America/Los_Angeles

    - Depend on Importer::Zim::Base 0.2.0, which brings
    - Support to "use IMPORTER MODULE => { -version => VERSION }...
    - Support to "use IMPORTER MODULE => :TAG"

v0.1     2017-09-05 17:50:07-07:00 America/Los_Angeles

    - Initial version

v0.0     2017-09-05 17:39:00-07:00 America/Los_Angeles

    - Initial commit