@@ -3,6 +3,9 @@ Release history for Importer-Zim-Lexical
 
 {{$NEXT}}
 
+    - Lift dependency on Importer::Zim::Base to runtime
+    - Depend on Importer::Zim::Base 0.12.0+
+
 v0.9     2017-11-08 16:43:30-08:00 America/Los_Angeles
 
     - export_to() function
